--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "node-red": {
     "nodes": {
+      "project": "./nodes/project/project.js",
       "connection": "./nodes/connection/connection.js"
     }
   },
