--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-red-contrib-ozmap-api",
+  "name": "node-red-contrib-ozmap",
   "version": "1.0.0",
   "description": "OZMap wrapper to ozmap-api. Helper to use OZMap API's",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ozmap/ozmap-api.git"
+    "url": "git+git@github.com:ozmap/node-red-contrib-ozmap.git"
   },
   "keywords": [
     "ozmap",
@@ -30,9 +30,9 @@
   "author": "Jose Raupp da Rosa Junior <jose.raupp@ozmap.com.br>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ozmap/ozmap-api/issues"
+    "url": "https://github.com/ozmap/node-red-contrib-ozmap/issues"
   },
-  "homepage": "https://github.com/ozmap/ozmap-api#readme",
+  "homepage": "https://github.com/ozmap/node-red-contrib-ozmap/wiki",
   "dependencies": {
     "ozmap-api": "^1.0.23"
   }
