--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
   },
   "homepage": "https://github.com/ozmap/node-red-contrib-ozmap/wiki",
   "dependencies": {
-    "ozmap-api": "^1.0.23"
+    "ozmap-sdk": "^1.0.0"
   }
 }
