adição da caixinha de usuario; modificaçãopra utilizar o ozmap-sdk

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodes": {
       "project": "./nodes/project/project.js",
       "box": "./nodes/box/box.js",
+      "user": "./nodes/user/user.js",
       "connection": "./nodes/ozmap-connection/ozmap-connection.js"
     }
   },
