Implementado caixinha de criaçao de usuario e update de senha do usuario

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
       "project": "./nodes/project/project.js",
       "box": "./nodes/box/box.js",
       "user": "./nodes/user/user.js",
+      "createUser":"./nodes/user/createUser.js",
+      "updatePassword":"./nodes/user/updateUserPassword.js",
       "connection": "./nodes/ozmap-connection/ozmap-connection.js"
     }
   },
