--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
       "user": "./nodes/user/user.js",
       "createUser":"./nodes/user/createUser.js",
       "updatePassword":"./nodes/user/updateUserPassword.js",
+      "updateClient": "./nodes/client/updateClient.js",
       "connection": "./nodes/ozmap-connection/ozmap-connection.js"
     }
   },
