* Criado caixas: -> getAllPropertiesWithClients.js; -> getPropertyByClientId.js; -> updateProperty.js

--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
       "updatePassword":"./nodes/user/updateUserPassword.js",
       "updateClient": "./nodes/client/updateClient.js",
       "getOZmapClientByONUCode": "./nodes/client/getOZmapClientByONUCode.js",
+      "getPropertyByClientId": "./nodes/property/getPropertyByClientId.js",
+      "updateProperty": "./nodes/property/updateProperty.js",
+      "getAllPropertiesWithClients": "./nodes/property/getAllPropertiesWithClients.js",
       "connection": "./nodes/ozmap-connection/ozmap-connection.js"
     }
   },
