refs feature/NRSDK-6
Adicionando nodes de:
box, cable, client, network-connectable, network-connector e property.

--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
       "project-clone": "./nodes/project/clone.js",
       "box": "./nodes/box/box.js",
       "user": "./nodes/user/user.js",
+      "cable": "./nodes/cable/cable.js",
+      "client": "./nodes/client/client.js",
+      "property": "./nodes/property/property.js",
       "createUser":"./nodes/user/createUser.js",
       "updatePassword":"./nodes/user/updateUserPassword.js",
       "updateClient": "./nodes/client/updateClient.js",
+      "networkConnector": "./nodes/network-connector/network-connector.js",
+      "networkConnectable": "./nodes/network-connectable/network-connectable.js",
       "getOZmapClientByONUCode": "./nodes/client/getOZmapClientByONUCode.js",
       "getPropertyByClientId": "./nodes/property/getPropertyByClientId.js",
       "updateProperty": "./nodes/property/updateProperty.js",
