--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
       "getPropertyByClientId": "./nodes/property/getPropertyByClientId.js",
       "updateProperty": "./nodes/property/updateProperty.js",
       "getAllPropertiesWithClients": "./nodes/property/getAllPropertiesWithClients.js",
-      "connection": "./nodes/ozmap-connection/ozmap-connection.js"
+      "connection": "./nodes/ozmap-connection/ozmap-connection.js",
+      "region": "./nodes/region/region.js"
     }
   },
   "author": "Jose Raupp da Rosa Junior <jose.raupp@ozmap.com.br>",
