--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "OZMap wrapper to ozmap-api. Helper to use OZMap API's",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ./",
+    "lint:fix": "eslint ./ --fix",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,html}\""
   },
   "repository": {
     "type": "git",
@@ -48,5 +51,13 @@
     "url": "https://github.com/ozmap/node-red-contrib-ozmap/issues"
   },
   "homepage": "https://github.com/ozmap/node-red-contrib-ozmap/wiki",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "@ozmap/ozmap-sdk": "0.0.19",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.4.1"
+  }
 }
