--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-red-contrib-ozmap",
+  "name": "@ozmap/node-red-contrib-ozmap",
   "version": "1.0.0",
   "description": "OZMap wrapper to ozmap-api. Helper to use OZMap API's",
   "main": "index.js",
@@ -53,6 +53,7 @@
   },
   "homepage": "https://github.com/ozmap/node-red-contrib-ozmap/wiki",
   "dependencies": {
+    "@ozmap/ozmap-sdk": "^0.2.1",
     "node-red": "^2.1.3"
   },
   "devDependencies": {
