--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "@ozmap/ozmap-sdk": "^1.0.17",
     "node-red": "^2.1.3"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
