--- a/.github/workflows/deploy_npm.yml
+++ b/.github/workflows/deploy_npm.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Publish to NPM
       env:
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      run: npm --scope=ozmap publish
+      run: echo $NPM_TOKEN &&  npm --scope=ozmap publish
