--- a/.github/workflows/deploy_npm.yml
+++ b/.github/workflows/deploy_npm.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Publish to NPM
       env:
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      run: npm --scope=ozmap --publish
+      run: npm --scope=ozmap publish
