--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "@ozmap/node-red-contrib-ozmap",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "OZMap wrapper to ozmap-api. Helper to use OZMap API's",
+  "engines": {
+    "node": ">=14.0.0 <19.0.0"
+  },
+  "engineStrict": true,
   "main": "index.js",
   "scripts": {
     "test": "jest",
